# lilium

./: Cargo.toml  README.md
automata/: Cargo.toml
ccs/: Cargo.toml
ccs/src/: gates.rs
commit/: Cargo.toml
commit/src/batching/multipoint/: reduction.rs
commit/src/commit2/: mod.rs  relation.rs
commit/src/commit2/oracle/: mod.rs
commit/src/ipa/: vector_utils.rs
commit/src/ipa/tests/: poly_comm.rs
hash-to-curve/: Cargo.toml
lilium/: Cargo.toml
lilium/benches/exectime/: main.rs
lilium/benches/memory/: allocator.rs  main.rs
lilium/benches/runtime/: main.rs
lilium/src/: circuit_key.rs  folding.rs  lib.rs  prove.rs  verify.rs
lilium/src/circuits/: mod.rs
lilium/src/instances/flcs/: folding.rs  key.rs  reduction.rs  reduction_proving.rs  sumcheck_reduction.rs
lilium/src/instances/lcs/: verifying.rs
lilium/src/instances/linearized/: proving.rs  reduction_proving.rs
lilium/src/proving/: matrix_eval.rs  matrix_eval2.rs
shout/: Cargo.toml
spark/: Cargo.toml
spark/src/: lib.rs
spark/src/committed_spark/: mod.rs
spark/src/spark2/: flexible.rs  reduction.rs
spark/src/spark3/: committed.rs  mod.rs  prove.rs  reduction.rs  sumcheck_argument.rs
spark/src/tests/: single_dimension_spark.rs  two_dimensions_spark.rs
sponge/: Cargo.toml
sponge/src/: sponge.rs
sponge/src/poseidon2/: internal_matrix.rs  small_pow.rs
sumcheck/: Cargo.toml
sumcheck/derive/: Cargo.toml
sumcheck/derive/src/: evals.rs  evals_core.rs  lib.rs
sumcheck/src/: barycentric_eval.rs  eq.rs  eval_check.rs  lib.rs  message.rs  polynomials.rs  sumcheck.rs  utils.rs  zerocheck.rs
sumcheck/src/folding/: prover.rs  tests.rs  zerocheck.rs  zerofold.rs
sumcheck/src/sumcheck2/: evals.rs  mod.rs  prove.rs  reduction.rs  relation.rs
sumcheck/src/sumcheck2/folding/: degree.rs  mod.rs  reduction.rs  zerofold.rs
sumcheck/src/sumcheck2/oracles/: composite.rs  core.rs  empty.rs  function.rs  mod.rs  partial.rs  small.rs
sumcheck/src/sumcheck2/zerocheck/: evals.rs  mod.rs  reduction.rs  relation.rs
sumcheck/src/tests/: mod.rs
transcript/: Cargo.toml
transcript/src/: lib.rs  tests.rs  transcript_builder.rs
transcript/src/reduction2/: composition.rs  message.rs  mod.rs  proof.rs  prover.rs  reduction.rs  relations.rs  transcript.rs  transcript_builder.rs  verifier.rs
