[package]
name = "lilium-lcs"
version = "0.1.0"
edition = "2021"
description = "Lilium's circuit building utilities"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"

[dev-dependencies]
ark-vesta = "0.4.0"

[lib]
bench = false