[package]
name = "lilium-htc"
version = "0.1.0"
edition = "2021"
description = "Hash-to-curve implementation"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-vesta = "0.4"

[dev-dependencies]
rand = "0.8"

[lib]
bench = false