[package]
name = "lilium"
version = "0.1.0"
edition = "2021"
description = "The Lilium proof-system"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ccs = { workspace = true }
sumcheck = { workspace = true }
commit = { workspace = true }
spark = { workspace = true}
sponge = { workspace = true } 
transcript = { workspace = true }
hash-to-curve = { workspace = true, optional = true } 
ark-vesta = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
ark-vesta = "0.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
hash-to-curve = { workspace = true }
commit = { workspace = true, features = ["ipa"] }

[features]
ipa = ["commit/ipa", "dep:hash-to-curve"]
simple = ["dep:ark-vesta", "ipa"]

[lib]
bench = false

[[bench]]
name = "runtime"
harness = false

[[example]]
name = "example1"
required-features = ["simple"]

[[example]]
name = "example2"
required-features = ["simple"]

[[example]]
name = "example3"
required-features = ["simple"]

