[package]
name = "lilium-spark"
version = "0.1.0"
edition = "2021"
description = "Liliums' Spark implementation"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
sumcheck = { workspace = true } 
sumcheck-derive = { workspace = true } 
transcript = { workspace = true } 
sponge = { workspace = true } 
commit = { workspace = true } 

[dev-dependencies]
rand = "0.8"
ark-vesta = "0.4"

[lib]
bench = false
