[package]
name = "lilium-sponge"
version = "0.1.0"
edition = "2021"
description = "Lilium's sponge traits and implementations"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
automata = { workspace = true } 

[lib]
bench = false