[package]
name = "lilium-sumcheck"
version = "0.1.0"
edition = "2021"
description = "generic Sumcheck implementation for Lilium"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
transcript = { workspace = true } 
sponge = { workspace = true } 
automata = { workspace = true } 

[dev-dependencies]
rand = "0.8.5"
ark-vesta = "0.4"
ark-poly = "0.4"

[lib]
bench = false