[package]
name = "lilium-transcript"
version = "0.1.0"
edition = "2021"
description = "Transcript implementation for Lilium"
repository = "https://github.com/fabrizio-m/lilium"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff = { version = "0.4", default-features = false }
sponge = { workspace = true }

[dev-dependencies]
ark-vesta = "0.4"

[lib]
bench = false